fix broken ui

--- a/src/components/Layout/Footer/Footer.module.scss
+++ b/src/components/Layout/Footer/Footer.module.scss
@@ -132,7 +132,7 @@
 
     .separate {
         border: 1px solid #8E91A0;
-        margin: 0 -100%;
+        // margin: 0 -100%;
     }
 
     .footer-bottom {
